<resources>
    <string name="app_name">Prita</string>
    <string name="lg">Login</string>
    <string name="rg">Register</string>
    <string name="pass_hint">Input Password</string>
    <string name="log_email_hint">Enter email or username</string>
    <string name="frgt_pass">Forgot Password?</string>
    <string name="reg_lnk">Don\'t Have Account? Register Here</string>
    <string name="log_lnk">Have Account? Click here to Login</string>


    <string name="reg_name_hint">Enter Name</string>
    <string name="reg_surname_hint">Enter Surname</string>
    <string name="reg_email_hint">Enter e-mail</string>
    <string name="reg_contact_hint">Enter Mobile No.</string>
    <string name="reg_id_hint">Enter Identity Number</string>


    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Translate</string>
    <string name="menu_join">Join Event</string>
    <string name="menu_my_events">My Events</string>
    <string name="menu_upcoming_events">Upcoming Events</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_home">HomeActivity</string>

    <string-array name="languages">
        <item>English</item>
        <item>Afrikaans</item>
        <item>Zulu</item>
        <item>Sotho</item>
        <item>Tsonga</item>
    </string-array>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>