<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rg"
        android:gravity="center"
        android:fontFamily="sans-serif-medium"
        android:textFontWeight="1000"
        android:textColor="@color/blue_zodiac"
        android:textSize="70dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/white"

                android:hint="@string/reg_name_hint"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstnameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/white"

                android:hint="@string/reg_surname_hint"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastnameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/white"

            android:hint="@string/reg_id_hint"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/white"

                android:hint="@string/reg_email_hint"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/white"

                android:hint="@string/reg_contact_hint"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contactsInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/white"

            app:startIconDrawable="@drawable/lock_24"
            app:startIconTint="@color/carrot_orange"

            app:endIconMode="password_toggle"
            app:endIconTint="@color/carrot_orange"

            android:hint="@string/pass_hint"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwrdInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/uppercaseTxtView"
                android:textColor="@color/danger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="*Must contain at least 1 Uppercase Character"/>
            <TextView
                android:id="@+id/lowercaseTxtView"
                android:textColor="@color/danger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="*Must contain at least 1 Lowercase Character"/>
            <TextView
                android:id="@+id/numericTxtView"
                android:textColor="@color/danger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="*Must contain at least 1 Numeric Value"/>
            <TextView
                android:id="@+id/specCharTxtView"
                android:textColor="@color/danger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="*Must contain at least 1 Special Character"/>
            <TextView
                android:id="@+id/txtLengthTxtView"
                android:textColor="@color/danger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="*Must be 8 Characters Long"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/registerbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:background="@color/blue_zodiac"
            android:text="@string/rg"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/blue_zodiac" />

    </LinearLayout>
    <TextView
        android:id="@+id/loginLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_lnk"
        android:gravity="center"
        android:layout_marginTop="20dp"/>
</LinearLayout>